@@ -1,3 +1,7 @@
+2001-04-19  Keisuke Nishida  <kxn30@po.cwru.edu>
+
+	* receive.scm (receive): Use `define-macro'.
+
 2001-04-15  Keisuke Nishida  <kxn30@po.cwru.edu>
 
 	* boot-9.scm (load-compiled): New variable, initialized in the VM.
